manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-landing
spec:
  replicas: 1
  selector:
    matchLabels:
      app: html-landing
  template:
    metadata:
      labels:
        app: html-landing
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html
          configMap:
            name: html-content
