manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: html-landing
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http: #host: landing.argocd.bluedreamers.com
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: html-landing
            port:
              number: 80
